Fix warnings and checkstyle